cargo file fixed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,43 @@ version = "0.1.0"
 authors = ["orhanbalci <orhanbalci@gmail.com>"]
 
 [dependencies]
+
+[[bin]]
+name="arrays"
+path="src/arrays.rs"
+
+[[bin]]
+name="enums"
+path="src/enums.rs"
+
+[[bin]]
+name="binding"
+path="src/binding.rs"
+
+[[bin]]
+name="format"
+path="src/format.rs"
+
+[[bin]]
+name="for_range"
+path="src/for_range.rs"
+
+[[bin]]
+name="for_range2"
+path="src/for_range2.rs"
+
+[[bin]]
+name="for_vect"
+path="src/for_vect.rs"
+
+[[bin]]
+name="main"
+path="src/main.rs"
+
+[[bin]]
+name="stdin"
+path="src/stdin.rs"
+
+[[bin]]
+name="tuple_calculator"
+path="src/tuple_calculator.rs"
