cargo file updated

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,7 @@ path="src/tuple_calculator.rs"
 [[bin]]
 name="guessing_game"
 path="src/guessing_game.rs"
+
+[[bin]]
+name="factorial"
+path="src/factorial.rs"
